tests/testcases/errors/BCE0134-1.boo
"""
BCE0134-1.boo(5,9): BCE0134: 'Foo.constructor' cannot return values.
"""
class Foo:
	def constructor() as int:
		pass

